--- a/css/product.css
+++ b/css/product.css
@@ -1,8 +1,7 @@
-body{
-    font-family: "Poppins", sans-serif;
-}
+
 .container1{
     padding:3rem 0;
+   
   }
   .first_card{
     background: #dfe7f2;
@@ -12,6 +11,7 @@ body{
     box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     max-width: 960px;
     padding-bottom: 5mm;
+    padding-right: 5mm;
   }
 .second_card{
     background: #f7ead9;
@@ -36,6 +36,10 @@ body{
     font-size: 1.1rem;
     font-weight: 600;
     margin:3.5rem 0 1.5rem;
+    color: black;
+  }
+  h1{
+    color: var(--title-color);
   }
   .description{
   
@@ -46,6 +50,9 @@ body{
     text-align: justify;
     
     
+  }
+  .bottom-space{
+    padding-bottom: 5mm;
   }
   
   .arrow_btn{
@@ -121,3 +128,111 @@ body{
       display: none; 
   
   }
+
+ 
+:root{
+  --primary-color: aliceblue;
+  --secondary-color: black;
+  --title-color: #0067e6;
+}
+
+  [data-theme="dark"] {
+    --primary-color: black;
+    --secondary-color: white;
+    --title-color: #fec150;
+  }
+ 
+  body{
+    font-family: "Poppins", sans-serif;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+}
+form{
+background-color: var(--form-bg);
+}
+  
+/* TOGGLE  */
+.theme-switch-wrapper {
+display: flex;
+align-items: center;
+}
+
+.theme-switch-wrapper {
+margin-left: 1px;
+font-size: 1rem;
+}
+
+.theme-switch {
+display: inline-block;
+height: 25px;
+position: relative;
+width: 60px;
+}
+
+.theme-switch input {
+display: none;
+}
+
+.slider {
+background-color: #ccc;
+bottom: 0;
+cursor: pointer;
+left: 0;
+position: absolute;
+right: 0;
+top: 0;
+transition: 0.4s;
+border-radius: 24px;
+}
+
+.slider:before {
+background-color: #fff;
+bottom: 4px;
+content: "";
+height: 18px;
+left: 8px;
+position: absolute;
+transition: 0.4s;
+width: 18px;
+border-radius: 50%;
+}
+
+input:checked + .slider {
+background-color: #fec150;
+}
+
+input:checked + .slider:before {
+transform: translateX(22px);
+}
+
+.slider svg {
+color: #222;
+position: absolute;
+transition: opacity 0.2s ease 0s, transform 0.35s ease 0s;
+pointer-events: none;
+}
+
+.feather-moon {
+opacity: 0;
+left: 9px;
+bottom: 4px;
+transform: translateX(4px);
+}
+
+.feather-sun {
+opacity: 1;
+right: 10px;
+bottom: 5px;
+transform: translateX(0px);
+}
+
+input:checked + .slider .feather-moon {
+opacity: 1;
+transform: translateX(0);
+}
+
+input:checked + .slider .feather-sun {
+opacity: 0;
+transform: translateX(-4px);
+}
+
