--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,58 @@ position:absolute !important;
     border: 1px solid rgba(0,0,0,.125) !important;
     border-radius: .25rem !important;
 }
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  text-align: center;
+  cursor: pointer;
+  width: 70%;
+  font-size: 18px;
+}
+
+.im {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  border-radius: 100%
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
+}
+
+#TextforCarosel{
+  color: aliceblue;
+  font-size: 20px;
+  text-emphasis-style: filled;
+}
+#HeadForCarosel{
+  font-size: 30px;
+  color: aliceblue;
+}
+
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.profile-pic {
+  display: inline;
+  margin: 0 auto;
+  margin-left: 0%;
+  height: 100;
+  width: 50;
+  border-radius: 100px;
+}
+
+
 div#founder_details iframe{
     padding-bottom: 5mm;
     padding-left: 5mm;
@@ -29,7 +81,7 @@ div#founder_details iframe{
 :root{
   --primary-color: aliceblue;
   --secondary-color: black;
-  --form-background:rgba(0, 0, 0, 0.233);
+  --form-background:#0000003b;
   --title-color: #0067e6;
   
   --border-cursor-color : rgba(255,255,255,.75);
