--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@
     font-weight: 700;
     padding-bottom: 5px;
     color:var(--title-color);
-  } 
+  }
   .section-head p{
     color:#818181;
     font-size: 16px;
@@ -73,8 +73,8 @@
   .item:hover p{
     color:var(--primary-color);
     -webkit-transition:all 0.5s ease 0s;
-    transition:all 0.5s ease 0s;    
-  
+    transition:all 0.5s ease 0s;
+
   }
   .item .icon{
     font-size:40px;
@@ -117,11 +117,11 @@
     margin-bottom: 20px;
     color:var(--title-color);
   }
-  
-    
+
+
 :root{
   --primary-color: aliceblue;
-  --secondary-color: black;
+  --secondary-color: #0075A2;
   --title-color: #0067e6;
     --item-background:#fff;
   --item-hover: #0075a2;
@@ -143,13 +143,14 @@
 body{
     background: var(--primary-color);
     color: var(--secondary-color);
+    font-family: "Comic Sans MS";
 }
 /*2f2f2f*/
 
 p,h6,.heading,.item{
 
   white-space: nowrap;
-  overflow: hidden;    
+  overflow: hidden;
   text-align: justify;
 
 }
