--- a/css/feedback_help.css
+++ b/css/feedback_help.css
@@ -1,28 +1,30 @@
 
 :root{
     --primary-color: aliceblue;
-    --secondary-color: black;
-    --form-background:rgba(0, 0, 0, 0.233);
+    --secondary-color: #0075A2;
+    /* --form-background:rgba(0, 0, 0, 0.233); */
+    --form-background: #e6e6e6;
     --title-color: #0067e6;
     --border-cursor-color : rgba(255,255,255,.75);
   }
-  
+
     [data-theme="dark"] {
       --primary-color: black;
       --secondary-color: white;
       --title-color: #fec150;
       --border-cursor-color : black;
     }
-  
+
   .heading{
       color: var(--title-color);
       padding-top: 5mm;
       padding-bottom: 5mm;
   }
-  
+
   body{
     background-color: var(--primary-color);
     color: var(--secondary-color) ;
+    font-family: "Comic Sans MS";
   }
 
 .card{
@@ -51,7 +53,7 @@ button:hover {
 form,.card,.heading{
 
   white-space: nowrap;
-  overflow: hidden;    
+  overflow: hidden;
   text-align: justify;
 
 }
