Added Email functionality in contact Section

--- a/css/shopping.css
+++ b/css/shopping.css
@@ -15,7 +15,7 @@ body{
 /* Main container */
 .cbp-vm-switcher {
 	padding: 20px;
-	border: 3px solid #47a3da;
+	/* border: 3px solid #47a3da; */
 }
 
 /* options/select wrapper with switch anchors */
