Add validation in contact,complain,feedback,cart details form

--- a/css/feedback_help.css
+++ b/css/feedback_help.css
@@ -26,6 +26,9 @@
     color: var(--secondary-color) ;
     font-family: "Comic Sans MS";
   }
+  .required-star{
+    color: red;
+  }
 
 .card{
 background: var(--primary-color);
